Unified: Activate when opened by tab focus

UnifiedSystemTray button can be opened by tab focusing. In such case, we
should activate the bubble so that the user can continue interacting with
the tray by keys.

BUG=859017

Change-Id: Ibd8b79cccd5efbc8d2f1bd6fe6319282689f621d
Reviewed-on: https://chromium-review.googlesource.com/1124266
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572904}
Former-commit-id: a56191967473203ee2d4382f29797d9e8065b504